working upcoming words and restructure of functionality to be topdown

--- a/src/styles/Upcoming.module.scss
+++ b/src/styles/Upcoming.module.scss
@@ -26,6 +26,6 @@
   padding-right: 13px;
   font-size: 20px;
   height: 300px;
-  overflow-y: scroll;
+  overflow-y: hidden;
   overflow-x: hidden;
 }
