--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -26,6 +26,7 @@
   font-size: 64px;
   line-height: 78px;
   color: #ffffff;
+  margin-bottom: 38px;
 }
 
 .green {
@@ -37,6 +38,12 @@
   grid-template-columns: repeat(4, minmax(25%, auto));
   width: var(--max-width);
   max-width: 100%;
+}
+
+.center {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .center::before {
