--- a/src/styles/Inputword.module.scss
+++ b/src/styles/Inputword.module.scss
@@ -1,19 +1,35 @@
-.displayword {
+.form {
+  margin-bottom: 10px;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.inputword {
   width: 476px;
   height: 54px;
-
   background: rgba(0, 0, 0, 0.25);
   border: 3px solid #0c5900;
   border-radius: 5px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   font-size: 32px;
-  line-height: 39px;
+  text-align: center;
+
+  &:focus {
+    outline: none;
+  }
+}
+
+.test123 {
+  margin-top: 150px;
+  width: 500px;
+  height: 400px;
 }
 
 .center {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
