update to a lot lol

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -46,3 +46,10 @@
   justify-content: center;
   flex-direction: column;
 }
+
+.credits {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
