--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -16,7 +16,8 @@
   padding-right: 15vw;
   padding-left: 15vw;
   width: 100vw;
-  background-color: rgba(56, 56, 58, 0.616);
+  /*   background-color: rgba(56, 56, 58, 0.616); */
+  z-index: 10;
 }
 
 .header {
@@ -52,4 +53,13 @@
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
+}
+
+.treeDiv {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  margin-top: 30px;
+  height: 200px;
+  z-index: 1;
 }
