--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -58,8 +58,24 @@
 .treeDiv {
   display: flex;
   justify-content: center;
-  align-items: end;
+  align-items: flex-end;
   margin-top: 30px;
   height: 200px;
   z-index: 1;
+}
+
+@media (max-width: 1100px) {
+  .playground {
+    width: 100vw;
+    padding-right: 0vw;
+    padding-left: 0vw;
+  }
+  .treeDiv {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    margin-top: 0px;
+    height: 100px;
+    z-index: 1;
+  }
 }
