--- a/src/styles/Inputword.module.scss
+++ b/src/styles/Inputword.module.scss
@@ -21,15 +21,29 @@
   }
 }
 
-.test123 {
-  margin-top: 150px;
-  width: 500px;
-  height: 400px;
-}
-
 .center {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.redText {
+  color: red;
+}
+
+.greenText {
+  color: lightgreen;
+}
+
+.inlineContainer {
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+}
+
+@media (max-width: 1100px) {
+  .inputword {
+    width: 300px;
+  }
 }
