--- a/src/styles/Stats.module.scss
+++ b/src/styles/Stats.module.scss
@@ -52,9 +52,6 @@
   margin-top: -123px;
   margin-left: 110px;
   position: fixed;
-  /*   display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  grid-template-rows: repeat(7, 1fr); */
   z-index: 10;
   display: flex;
   justify-content: center;
@@ -68,4 +65,10 @@
   width: 43%;
   transition: height 0.5s ease;
   align-self: flex-end;
+}
+
+@media (max-width: 1100px) {
+  .sign {
+    display: none;
+  }
 }
