--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -74,8 +74,18 @@
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    margin-top: 0px;
+    margin-top: 100px;
     height: 100px;
     z-index: 1;
+  }
+}
+@media (max-width: 1100px) {
+  .treeDiv {
+    margin-top: 150px;
+  }
+}
+@media (max-width: 400px) {
+  .treeDiv {
+    margin-top: 100px;
   }
 }
